fixed sidebar overlap on small screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -112,6 +112,7 @@ body{
     vertical-align: top;
     margin: auto;
     margin-top: var(--title-height);
+    margin-left: var(--nav-width);
     padding: 10px;
     max-width: 600px;
     text-align: justify;
